[project]
name = "ssh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cryptography>=44.0.0",
    "curio @ git+https://github.com/dabeaz/curio.git",
]
[project.scripts]
pyssh = "ssh.cli.ssh:main"
pyscp = "ssh.cli.scp:main"


